[package]
name = "binance_orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
